fixtures/invalid/34-v0.10-invalid-generate-budget/input.anatomy
anatomy_version = "0.10"
tagline = "v0.10 with invalid budget (below minimum 500)"

[identity]
stack = "javascript"
form = "library"
domain = "demo"
function = "minimal"
fingerprint = "kh3ybxthmht0yvvskye2"

[generate]
agents_md_budget = 100

[generated]
at = 2026-05-13T12:00:00.000Z
by = "anatomy-cli@0.13.0"
model = "none"
schema = "https://anatomy.dev/spec/0.10/schema.json"
